--- a/Gradient-generator-project/style-gradient-generator.css
+++ b/Gradient-generator-project/style-gradient-generator.css
@@ -154,7 +154,7 @@ h2 {
 }
 .video-placeholder {
     width: 100%;
-    height: 620px;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -162,6 +162,7 @@ h2 {
     background-color: #3d3d3d;
     overflow: hidden;
     padding: 15px;
+    border-radius: 4px;
 }
 .project-card-video {
     height: 736px;
@@ -217,6 +218,7 @@ h2 {
     color: inherit;
     margin-bottom: 70px;
     background-color: var(--light-element);
+    border-radius: 4px;
 }
 .button:hover {
     background: var(--hover);
