--- a/contact.css
+++ b/contact.css
@@ -138,6 +138,7 @@ h1 {
     width: 65%;
     text-align: end;
     letter-spacing: 0.01em;
+    font-size: 44px;
 }
 .services-container h1 {
     width: 40%;
@@ -207,7 +208,6 @@ h1 {
     font-family: "Anton", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 44px;
 }
   
   
@@ -217,7 +217,7 @@ form {
     padding: 40px;;
     border-radius: 40px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 20px auto 50px auto;
+    margin: 20px auto 0 auto;
     color: var(--light-content);
 }
 .form p,
@@ -414,10 +414,29 @@ button[type="submit"]:hover {
     .bird-container {
         animation-duration: 22s!important;
     }
+    .services-image {
+        height: 100%;
+        margin-bottom: 20px;
+        object-position: unset;
+    }
+    .services-container {
+        flex-direction: column;
+    }
+    .service-content-container, .services-container p {
+        width: unset;
+        padding-left: 0;
+        margin-top: 20px;
+    }
+    .services-container h1 {
+        width: unset;
+    }
+    .achieve p {
+        font-size: 34px;
+    }
 }
 @media screen and (max-width: 628px) {
     main {
-        max-width: 299px!important;
+        max-width: 310px!important;
     }
     .header {
       flex-direction: column;
@@ -495,6 +514,31 @@ button[type="submit"]:hover {
     }
     .bird-container {
         animation-duration: 15s!important;
+    }
+    .field-container {
+        flex-direction: column;
+        gap: 0;
+    }
+    .field {
+        width: 100%;
+    }
+    button[type="submit"] {
+        font-size: 22px;
+    }
+    form {
+        padding: 15px;
+    }
+    .achieve p {
+        width: 100%;
+        font-size: 24px;
+    }
+    .services-image {
+        height: 100%;
+        margin-bottom: 20px;
+        object-position: unset;
+    }
+    .service-content-container, .services-container p {
+        font-size: 20px;
     }
 }
 
