--- a/Didacmania-project/style-didacmania-project.css
+++ b/Didacmania-project/style-didacmania-project.css
@@ -240,15 +240,14 @@ h2 {
 }
 .button {
     text-align: center;
-    width: 15%;
     min-width: 130px;
     text-transform: uppercase;
-    padding: 10px 15px 10px 15px;
+    padding: 15px 20px;
     text-decoration: none;
     color: inherit;
     margin-bottom: 70px;
     background-color: var(--light-element);
-    border-radius: 4px;
+    border-radius: 40px;
 }
 .button:hover {
     background: var(--hover);
@@ -258,6 +257,12 @@ h2 {
 }
 .project-card-dev {
     margin-bottom: 70px;
+}
+.anton-regular {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.03em;
 }
 /* Responsive */
 
