--- a/mes-services.css
+++ b/mes-services.css
@@ -138,6 +138,7 @@ h1 {
     width: 65%;
     text-align: end;
     letter-spacing: 0.01em;
+    font-size: 44px;
 }
 .services-container h1 {
     width: 40%;
@@ -178,7 +179,7 @@ h1 {
 .third-service {
     background: #394255;
 }
-.first-service-title {
+.service-title {
     width: 40%;
 }
 .service-content {
@@ -206,7 +207,6 @@ h1 {
     font-family: "Anton", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 44px;
 }
   
   
@@ -303,6 +303,20 @@ h1 {
     .bird-container {
         animation-duration: 22s!important;
     }
+    .services-container {
+        flex-direction: column;
+    }
+    .service-content-container, .services-container p {
+        width: unset;
+        padding-left: 0;
+        margin-top: 20px;
+    }
+    .services-container h1 {
+        width: unset;
+    }
+    .achieve p {
+        font-size: 34px;
+    }
 }
 @media screen and (max-width: 628px) {
     main {
@@ -384,6 +398,27 @@ h1 {
     }
     .bird-container {
         animation-duration: 15s!important;
+    }
+    .achieve p {
+        width: 100%;
+        font-size: 24px;
+    }
+    .services-image {
+        height: 100%;
+        margin-bottom: 20px;
+        object-position: unset;
+    }
+    .service-content-container, .services-container p {
+        font-size: 20px;
+    }
+    .first-service-title {
+        width: unset;
+    }
+    .first-service, .second-service, .third-service {
+        flex-direction: column;
+    }
+    .service-content p {
+        font-size: 18px;
     }
 }
 
